--- a/index.html
+++ b/index.html
@@ -22,63 +22,14 @@
         		<li><i class="fas fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">3</span> Moves
+        	<span class="moves">0 Moves</span>
 
             <div class="restart">
         		<i class="fas fa-repeat"></i>
         	</div>
         </section>
-
-        <ul class="deck">
-            <li class="card">
-                <i class="fas fa-diamond"></i>
-            </li>
-            <li class="card">
-                <i class="fas fa-paper-plane-o"></i>
-            </li>
-            <li class="card match">
-                <i class="fas fa-anchor"></i>
-            </li>
-            <li class="card">
-                <i class="fas fa-bolt"></i>
-            </li>
-            <li class="card">
-                <i class="fas fa-cube"></i>
-            </li>
-            <li class="card match">
-                <i class="fas fa-anchor"></i>
-            </li>
-            <li class="card">
-                <i class="fas fa-leaf"></i>
-            </li>
-            <li class="card">
-                <i class="fas fa-bicycle"></i>
-            </li>
-            <li class="card">
-                <i class="fas fa-diamond"></i>
-            </li>
-            <li class="card">
-                <i class="fas fa-bomb"></i>
-            </li>
-            <li class="card">
-                <i class="fas fa-leaf"></i>
-            </li>
-            <li class="card">
-                <i class="fas fa-bomb"></i>
-            </li>
-            <li class="card open show">
-                <i class="fas fa-bolt"></i>
-            </li>
-            <li class="card">
-                <i class="fas fa-bicycle"></i>
-            </li>
-            <li class="card">
-                <i class="fas fa-paper-plane-o"></i>
-            </li>
-            <li class="card">
-                <i class="fas fa-cube"></i>
-            </li>
-        </ul>
+        <section id="deck">
+        </section>
     </div>
 
     <script src="js/app.js"></script>
