Added time object

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
         	<span class="moves">0 Moves</span>
 
-            <div class="restart">
-        		<i class="fas fa-repeat"></i>
+          <div class="restart">
+        		<i class="fas fa-poo"></i>
         	</div>
         </section>
         <section id="deck">
