--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         		<li><i class="fas fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">0 Moves</span>
+        	<span class="moves">0 moves</span>
+          <span class="matches">0 matches</span>
+          <span class="time">0 seconds</span>
 
           <div class="restart">
         		<i class="fas fa-poo"></i>
