Add and style btn

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           <div class="time">
             <span class="score-text">time:</span><span class="score-value">0 min, 0 sec</span>
           </div>
-          <button>setting</button>
-          <button>restart</button>
+          <button class="btn">settings</button>
+          <button class="btn">restart</button>
         </section>
 
         <section id="deck">
