--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
         <section class="score-panel">
         	<ul class="stars">
-        		<li><i class="fas fa-star"></i></li>
-        		<li><i class="fas fa-star"></i></li>
-        		<li><i class="fas fa-star"></i></li>
+        		<li><i class="fas fa-star shine"></i></li>
+        		<li><i class="fas fa-star shine"></i></li>
+        		<li><i class="fas fa-star shine"></i></li>
         	</ul>
           <div class="moves">
             <span class="score-text">moves:</span><span class="score-value">0</span>
