Add modal container

--- a/index.html
+++ b/index.html
@@ -38,7 +38,23 @@
 
         <section id="deck">
         </section>
+
+        <div class="modal">
+          <div class="modal-content">
+            <header class="modal-header">
+
+            </header>
+            <main class="modal-main">
+
+            </main>
+            <footer class="modal-footer">
+
+            </footer>
+          </div>
+        </div>
     </div>
+
+
 
     <script src="js/app.js"></script>
 </body>
