--- a/index.html
+++ b/index.html
@@ -41,20 +41,11 @@
 
         <div class="modal">
           <div class="modal-content">
-            <header class="modal-header">
-
-            </header>
-            <main class="modal-main">
-
-            </main>
-            <footer class="modal-footer">
-
-            </footer>
+              <button class="close-btn" aria-label="Close Winner Modal Box">&times;</button>
+              <h1>Winner!</h1>
           </div>
         </div>
     </div>
-
-
 
     <script src="js/app.js"></script>
 </body>
