style: conform to style guides

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <h1 class="winner-heading">Winner!</h1>
               <div class="settings">
                 <h1 class="settings-heading">Settings</h1>
-                <form action="" class="settings-form">
+                <form class="settings-form">
                   <fieldset class="game-size">
                     <legend>Game Size</legend>
                     <div class="radio-container">
@@ -65,10 +65,6 @@
                 <button class="btn settings-new-game">new game</button>
               </div>
           </div>
-        </div>
-
-        <div class="settings">
-
         </div>
     </div>
 
